// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppComponent should render the component 1`] = `
<div
  id="root0"
>
  <mat-toolbar
    class="mat-elevation-z6"
    color="primary"
  >
    <mat-icon>
      wb_sunny
    </mat-icon>
    <span
      class="app-name"
      routerlink="/"
    >
      WeatherApp
    </span>
    <a
      class="example-icon"
      href="https://github.com/mpalenov/weather-app"
      mat-button=""
      target="_blank"
    >
      <mat-icon
        svgicon="github"
      />
        GitHub 
    </a>
  </mat-toolbar>
  
  <router-outlet />
</div>
`;

exports[`AppComponent should render the component with the loader 1`] = `
<div
  id="root1"
>
  <mat-toolbar
    class="mat-elevation-z6"
    color="primary"
  >
    <mat-icon>
      wb_sunny
    </mat-icon>
    <span
      class="app-name"
      routerlink="/"
    >
      WeatherApp
    </span>
    <a
      class="example-icon"
      href="https://github.com/mpalenov/weather-app"
      mat-button=""
      target="_blank"
    >
      <mat-icon
        svgicon="github"
      />
        GitHub 
    </a>
  </mat-toolbar>
  
  <mat-progress-bar
    color="accent"
    mode="indeterminate"
  />
  <router-outlet />
</div>
`;
